# Brain

./: README.md  test.c
ipc/: Makefile  cJSON.h  communicate_lib.c  communicate_lib.h  json_lib.h  msg_client.c  test.h  test_demo.c  test_demo.h  type.h  udp_communicate_driver.c  udp_communicate_driver.h  unix_communicate_driver.c  unix_communicate_driver.h
jni_c_lib/: Android.mk  Application.mk
manage_server/: makefile
manage_server/core/: config_module.c  console.c  crc.c  get_pid_lib.c  host_cmd_if_lib.c  host_command.c  logs.c  msg_proto_lib.c  msg_service.c  network_commun.c  poll_command.c  poll_msg_if_lib.c  socket_udp.c  system_level.c  task.c  test_demo.c  type_conversion_cmd.c  uart_lib.c  unix_domain_socket.c  usr_module.c
manage_server/h/: cJSON.h  config_module.h  console.h  crc.h  get_pid_lib.h  host_cmd_if_lib.h  host_command.h  json_lib.h  logs.h  msg_proto_lib.h  network_commun.h  poll_command.h  poll_msg_if_lib.h  socket_udp.h  system_level.h  system_poll_cmd.h  task.h  test_demo.h  type.h  type_conversion_cmd.h  uart_lib.h  unix_domain_socket.h  usr_module.h
zebra/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  configure.lineno  log
zebra/autom4te.cache/: output.0  output.2  traces.0  traces.1  traces.2  traces.3
zebra/doc/: Makefile  Makefile.in  zebra.info
zebra/lib/: Makefile  Makefile.am  Makefile.in  command.c  command.h  filter.c  memory.c  pid_output.c  plist.c  routemap.c  smux.c  sockunion.c  testt.c  vty.c  vty.h
zebra/lib/.deps/: buffer.Po  checksum.Po  command.Po  daemon.Po  distribute.Po  filter.Po  getopt1.Po  hash.Po  if.Po  keychain.Po  linklist.Po  log.Po  md5.Po  memory.Po  network.Po  pid_output.Po  plist.Po  pqueue.Po  prefix.Po  print_version.Po  routemap.Po  smux.Po  sockopt.Po  sockunion.Po  str.Po  stream.Po  table.Po  testt.Po  thread.Po  vector.Po  vty.Po  zclient.Po
zebra/zebra/: Makefile  Makefile.am  Makefile.in  debug.c  if_proc.c  interface.c  ioctl.c  main.c  rt_netlink.c  rtadv.c  zebra_rib.c  zebra_vty.c  zserv.c
zebra/zebra/.deps/: connected.Po  debug.Po  if_netlink.Po  if_proc.Po  interface.Po  ioctl.Po  ipforward_proc.Po  irdp_interface.Po  irdp_main.Po  irdp_packet.Po  main.Po  redistribute.Po  rt_netlink.Po  rtadv.Po  rtread_netlink.Po  zebra_rib.Po  zebra_snmp.Po  zebra_vty.Po  zserv.Po
zebra/zebra/product/: Makefile  Makefile.am  Makefile.in
zebra/zebra/product/common/: Makefile  Makefile.am  Makefile.in  common_command.c  common_command.h
zebra/zebra/product/common/.deps/: common_admin.Po  common_command.Po  common_config.Po  common_log.Po  common_network.Po  common_ophylink_debug.Po  common_snmp_config.Po  common_snmp_trap.Po  common_sysinfo.Po  common_tty_switch.Po  common_upgrade.Po  common_user_manage.Po
